unpackaged/main/default/objects/Non_Show__c/Non_Show__c.object-meta.xml
<CustomObject>
    <description>Shows for clients for private events.</description>
    <label>Non-Show</label>
    <nameField>
        <label>Non-Show Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Non-Shows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>