unpackaged/main/default/objects/Non_Show__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select an existing Facility, Firm or Account to ship the project to.</inlineHelpText>
    <label>Facility</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Facility</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Non-Shows</relationshipLabel>
    <relationshipName>Non_Shows</relationshipName>
    <type>Lookup</type>
</CustomField>