unpackaged/main/default/objects/Non_Show__c/fields/Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Update Is Locked Field to True When Opportunity is in Closed Won Stage</description>
    <label>Is Locked</label>
    <type>Checkbox</type>
</CustomField>