unpackaged/main/default/objects/Non_Show__c/fields/LMS_Facility_ID__c.field-meta.xml
<CustomField>
    <fullName>LMS_Facility_ID__c</fullName>
    <formula>Facility__r.LMS_Facility_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LMS Facility ID</label>
    <type>Text</type>
</CustomField>