unpackaged/main/default/objects/Non_Show__c/fields/Production_Location__c.field-meta.xml
<CustomField>
    <fullName>Production_Location__c</fullName>
    <label>Production Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>110- Las Vegas</fullName>
            </value>
            <value>
                <fullName>140- Salt Lake City</fullName>
            </value>
            <value>
                <fullName>150- Reno</fullName>
            </value>
            <value>
                <fullName>160- Denver</fullName>
            </value>
            <value>
                <fullName>170- Phoenix</fullName>
            </value>
            <value>
                <fullName>220- Los Angeles, CA</fullName>
            </value>
            <value>
                <fullName>240- San Francisco, San Jose</fullName>
            </value>
            <value>
                <fullName>250- San Diego</fullName>
            </value>
            <value>
                <fullName>270- Corporate Events</fullName>
            </value>
            <value>
                <fullName>420- Austin, Dallas, Houston, San Antonio</fullName>
            </value>
            <value>
                <fullName>480- Montreal, Canada</fullName>
            </value>
            <value>
                <fullName>510- Atlanta</fullName>
            </value>
            <value>
                <fullName>520- Miami, Tampa</fullName>
            </value>
            <value>
                <fullName>520- Florida</fullName>
            </value>
            <value>
                <fullName>530- New Orleans</fullName>
            </value>
            <value>
                <fullName>610- Portland, Seattle</fullName>
            </value>
            <value>
                <fullName>710- Chicago, Cleveland, Milwaukee, St. Louis</fullName>
            </value>
            <value>
                <fullName>790- Minneapolis</fullName>
            </value>
            <value>
                <fullName>810- New York &amp; Boston</fullName>
            </value>
            <value>
                <fullName>830-DC, Philadelphia</fullName>
            </value>
            <value>
                <fullName>890- Canada</fullName>
            </value>
            <value>
                <fullName>940- Foreign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>