unpackaged/main/default/objects/Non_Show__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Digital/Content Development</fullName>
            </value>
            <value>
                <fullName>Exhibit Program</fullName>
            </value>
            <value>
                <fullName>Exhibit Shipping/Storage/Disposal</fullName>
            </value>
            <value>
                <fullName>Holiday Program</fullName>
            </value>
            <value>
                <fullName>Measurement &amp; Analytics</fullName>
            </value>
            <value>
                <fullName>Meetings &amp; Events</fullName>
            </value>
            <value>
                <fullName>Misc. Product Rental/Purchase</fullName>
            </value>
            <value>
                <fullName>One Time Event</fullName>
            </value>
            <value>
                <fullName>Pop Up</fullName>
            </value>
            <value>
                <fullName>Product Launch</fullName>
            </value>
            <value>
                <fullName>Virtual Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>