unpackaged/main/default/objects/Non_Show__c/fields/Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City__c</fullName>
    <label>Facility City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>