unpackaged/main/default/objects/Non_Show__c/fields/Shipping_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State_Province__c</fullName>
    <label>Facility State/Province</label>
    <length>20</length>
    <type>Text</type>
</CustomField>