unpackaged/main/default/objects/Non_Show__c/fields/Show_ID__c.field-meta.xml
<CustomField>
    <fullName>Show_ID__c</fullName>
    <label>Show ID (LMS)</label>
    <length>6</length>
    <type>Text</type>
</CustomField>