unpackaged/main/default/objects/Non_Show__c/recordTypes/US_Housing.recordType-meta.xml
<RecordType>
    <fullName>US_Housing</fullName>
    <active>true</active>
    <description>Non shows for US Housing line of business (onPeak)</description>
    <label>US - Housing</label>
</RecordType>