unpackaged/main/default/objects/Non_Show__c/validationRules/Enter_One_Facility_or_Ship_to_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_One_Facility_or_Ship_to_Address</fullName>
    <active>false</active>
    <errorConditionFormula>OR( Facility__r.BillingStreet &lt;&gt; Shipping_Street__c ) 
&amp;&amp; 
LEN( Shipping_Street__c ) &gt; 0 
&amp;&amp; 
LEN(  Facility__r.BillingStreet )&gt; 0
 || ((Shipping_City__c &lt;&gt; Facility__r.BillingCity   ) 
&amp;&amp; 
LEN(  Shipping_City__c  ) &gt; 0 
&amp;&amp; 
LEN(   Facility__r.BillingCity  )&gt; 0)
 || (( Facility__r.BillingState &lt;&gt;  Shipping_State_Province__c) 
&amp;&amp; 
LEN(  Shipping_State_Province__c ) &gt; 0 
&amp;&amp; 
LEN(  Facility__r.BillingState )&gt; 0)
|| (( Facility__r.BillingState &lt;&gt;  Shipping_State_Province__c) 
&amp;&amp; 
LEN( Shipping_Zip_Postal_Code__c ) &gt; 0 
&amp;&amp; 
LEN( Facility__r.BillingPostalCode )&gt; 0)
|| ((  Shipping_Country__c &lt;&gt;  Facility__r.BillingCountry) 
&amp;&amp; 
LEN( Shipping_Country__c  ) &gt; 0 
&amp;&amp; 
LEN( Facility__r.BillingCountry )&gt; 0)
&amp;&amp; NOT ($User.Id = &quot;005400000010HAt&quot;) 
&amp;&amp; NOT(OR($Profile.Name = &quot;GES Interface&quot;,
$Profile.Name = &#39;EMEA Spiro Interface&#39;,
$Profile.Name = &quot;System Administrator&quot;,
$User.Id = &quot;00540000003NbAFAA0&quot;, 
$User.Id = &quot;0051W000004H7uHQAS&quot;) /*Connie Masters and Shelly Barnes for AV Non-shows */ 

)</errorConditionFormula>
    <errorMessage>Please enter a Facility or Ship to Company Address, it is not valid to have both addresses.</errorMessage>
</ValidationRule>