unpackaged/main/default/objects/Non_Show__c/validationRules/Format_Non_Show_Shipping_Zip_Postal_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Format_Non_Show_Shipping_Zip_Postal_Code</fullName>
    <active>true</active>
    <description>United States billing addresses requires postal code in this format: 99999-9999.</description>
    <errorConditionFormula>AND(NOT(OR($Profile.Name = &#39;GES Interface&#39;, $Profile.Name = &#39;EMEA Spiro Interface&#39;, $Profile.Name = &#39;EDAdmin_Interface&#39;,$Profile.Name = &#39;System Administrator&#39;,
$User.Id = &quot;00540000003NbAFAA0&quot;, 
$User.Id = &quot;0051W000004H7uHQAS&quot;)), 

/*Connie Masters and Shelly Barnes for AV Non-shows */ 

IF(AND(NOT(ISNULL(Shipping_Country__c)), OR(UPPER(Shipping_Country__c) = &#39;US&#39;)), IF(REGEX(Shipping_Zip_Postal_Code__c, &quot;[0-9]{5}-[0-9]{4}&quot;), false, true), false))</errorConditionFormula>
    <errorDisplayField>Shipping_Zip_Postal_Code__c</errorDisplayField>
    <errorMessage>United States shipping address postal code must include 4 digit extension. Please enter postal code in this format: 99999-9999.</errorMessage>
</ValidationRule>