unpackaged/main/default/objects/Non_Show__c/validationRules/Lock_Show_Close_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Show_Close_Date</fullName>
    <active>true</active>
    <description>Lock Show Close Date When Opportunity is Closed Won</description>
    <errorConditionFormula>AND(ISCHANGED(Show_Close__c), Is_Locked__c,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$User.Id &lt;&gt; &quot;005400000010HD9&quot;,
$User.Id &lt;&gt; &quot;00540000002TYvl&quot;,  /* Jason Lapinskas  */   
$User.Id &lt;&gt; &quot;005Pb000001MwZR&quot;)</errorConditionFormula>
    <errorDisplayField>Show_Close__c</errorDisplayField>
    <errorMessage>Cannot edit Show Close Date as Opportunity Stage is Closed Won.</errorMessage>
</ValidationRule>