unpackaged/main/default/objects/Non_Show__c/validationRules/Make_Project_Type_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Make_Project_Type_required</fullName>
    <active>true</active>
    <description>Make Project Type required</description>
    <errorConditionFormula>AND(ISPICKVAL(Project_Type__c,&quot;&quot;), NOT($Profile.Name = &quot;GES Interface&quot;), NOT($Profile.Name = &quot;EMEA Spiro Interface&quot;), NOT($Profile.Name = &quot;System Administrator&quot;), NOT($RecordType.DeveloperName = &quot;US_Housing&quot;))</errorConditionFormula>
    <errorMessage>Please enter the Project Type</errorMessage>
</ValidationRule>