unpackaged/main/default/objects/Non_Show__c/validationRules/Shipping_City_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_City_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
LEN(  Facility__r.BillingCity ) =0,
LEN( Shipping_City__c ) =0)
&amp;&amp; NOT(OR($Profile.Name = &#39;GES Interface&#39;, $Profile.Name = &#39;EMEA Spiro Interface&#39;, $Profile.Name = &#39;EDAdmin_Interface&#39;,$Profile.Name = &#39;System Administrator&#39;,
$User.Id = &quot;00540000003NbAFAA0&quot;, 
$User.Id = &quot;0051W000004H7uHQAS&quot; /*Connie Masters and Shelly Barnes for AV Non-shows */ 

))</errorConditionFormula>
    <errorDisplayField>Shipping_City__c</errorDisplayField>
    <errorMessage>Please enter the shipping or facility city</errorMessage>
</ValidationRule>