unpackaged/main/default/objects/Non_Show__c/validationRules/Shipping_Country_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_Country_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
LEN( Facility__r.BillingCountry ) =0, 
LEN( Shipping_Country__c ) =0)
&amp;&amp; NOT ( $User.Id = &quot;005400000010HAt&quot;) 
&amp;&amp; NOT(OR($Profile.Name = &quot;GES Interface&quot;, $Profile.Name = &quot;EMEA Spiro Interface&quot;,
$User.Id = &quot;00540000003NbAFAA0&quot;, 
$User.Id = &quot;0051W000004H7uHQAS&quot; /*Connie Masters and Shelly Barnes for AV Non-shows */ ))</errorConditionFormula>
    <errorDisplayField>Shipping_Country__c</errorDisplayField>
    <errorMessage>Please enter the shipping or facility Country</errorMessage>
</ValidationRule>