unpackaged/main/default/objects/Non_Show__c/validationRules/Shipping_State_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_State_Required</fullName>
    <active>true</active>
    <errorConditionFormula>LEN
(Shipping_State_Province__c )=0 
&amp;&amp; 
(( Shipping_Country__c  = &#39;US&#39;) || ( Shipping_Country__c  = &#39;USA&#39;) || ( Shipping_Country__c = &#39;us&#39;))

&amp;&amp; NOT(OR($Profile.Name = &quot;GES Interface&quot;, 
$Profile.Name = &quot;EMEA Spiro Interface&quot;, 
$Profile.Name = &quot;System Administrator&quot;, 
$User.Id = &quot;00540000003NbAFAA0&quot;, 
$User.Id = &quot;0051W000004H7uHQAS&quot; /*Connie Masters and Shelly Barnes for AV Non-shows */ ))</errorConditionFormula>
    <errorDisplayField>Shipping_State_Province__c</errorDisplayField>
    <errorMessage>Please enter a State</errorMessage>
</ValidationRule>