unpackaged/main/default/objects/Non_Show__c/validationRules/Shipping_State_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_State_Valid</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
NOT(OR( 
$Profile.Name = &quot;GES Interface&quot;, 
$Profile.Name = &quot;EMEA Spiro Interface&quot;,
$Profile.Name = &quot;GES Administrator Interface&quot;, 
$Profile.Name = &quot;ONS Integration Interface&quot;, 
$User.Id = &quot;00540000003NbAF&quot;,
$User.Id = &quot;0051W000004H7uH&quot;,
$User.Id = &quot;00540000003NbAFAA0&quot;, 
$User.Id = &quot;0051W000004H7uHQAS&quot;,
$Profile.Name = &quot;System Administrator&quot;)),

OR 
( Shipping_Country__c = &#39;US&#39; &amp;&amp; 
NOT( 
CONTAINS( 
&quot;AL:AK:AZ:AR:CA:CO:CT:DE:DC:FL:GA:HI:ID:&quot; &amp; 
&quot;IL:IN:IA:KS:KY:LA:ME:MD:MA:MI:MN:MS:MO:MT:&quot; &amp; 
&quot;NE:NV:NH:NJ:NM:NY:NC:ND:OH:OK:OR:PA:RI:SC:&quot; &amp; 
&quot;SD:TN:TX:UT:VT:VA:WV:WA:WI:WY:AS:GU:MP:PR:&quot; &amp; 
&quot;VI:FM:MH:PW:AA:AE:AP:CZ:PI:TT:CM:&quot;, Shipping_State_Province__c 
))))</errorConditionFormula>
    <errorDisplayField>Shipping_State_Province__c</errorDisplayField>
    <errorMessage>Please enter a valid shipping state when Country is United States.</errorMessage>
</ValidationRule>