unpackaged/main/default/objects/Non_Show__c/validationRules/Shipping_Street_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_Street_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
LEN( Shipping_Street__c )=0, 
LEN( Facility__r.BillingStreet )=0)

&amp;&amp; NOT(OR(
$Profile.Name = &quot;System Administrator&quot;, 
$User.Id = &quot;00540000003NbAFAA0&quot;, 
$User.Id = &quot;0051W000004H7uHQAS&quot; /*Connie Masters and Shelly Barnes for AV Non-shows */ ))</errorConditionFormula>
    <errorMessage>Please enter the shipping or facility street</errorMessage>
</ValidationRule>