unpackaged/main/default/objects/Non_Show__c/validationRules/Zip_Code_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Zip_Code_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR (Shipping_Country__c = &#39;US&#39; &amp;&amp;
OR (RIGHT( Shipping_Zip_Postal_Code__c ,4)=&#39;0000&#39;)),
NOT(OR($Profile.Name = &#39;System Administrator&#39;)))
&amp;&amp; NOT ( $User.Id = &quot;005400000010HAt&quot;)
&amp;&amp; NOT($Profile.Name = &quot;GES Interface&quot;)
&amp;&amp; NOT($Profile.Name = &quot;EMEA Spiro Interface&quot;)
&amp;&amp; NOT(OR($Profile.Name = &quot;GES Interface&quot;, $Profile.Name = &quot;EMEA Spiro Interface&quot;,
$Profile.Name = &quot;System Administrator&quot;,
$User.Id = &quot;00540000003NbAFAA0&quot;,
$User.Id = &quot;0051W000004H7uHQAS&quot; /*Connie Masters and Shelly Barnes for AV Non-shows */ ))</errorConditionFormula>
    <errorDisplayField>Shipping_Zip_Postal_Code__c</errorDisplayField>
    <errorMessage>0000 is not valid as zip code + 4</errorMessage>
</ValidationRule>