unpackaged/main/default/objects/Non_Show__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Show_Open__c</columns>
    <columns>Show_Close__c</columns>
    <columns>Shipping_City__c</columns>
    <columns>Shipping_State_Province__c</columns>
    <columns>GBMS_Show_ID__c</columns>
    <columns>Facility__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>