unpackaged/main/default/objects/Non_Show__c/listViews/CORE_Non_Shows.listView-meta.xml
<ListView>
    <fullName>CORE_Non_Shows</fullName>
    <columns>NAME</columns>
    <columns>Show_ID__c</columns>
    <columns>Job_Number__c</columns>
    <columns>LMS_Facility_ID__c</columns>
    <columns>Production_Location__c</columns>
    <columns>Show_Open__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>M1</value>
    </filters>
    <label>CORE Non-Shows</label>
</ListView>